--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,28 @@
 }
 
 /* regole debug  */
-.debug {
+.debug * {
     border: solid red 3px;
-    padding: 20px;
+    padding: 10px;
+}
+
+body {
+    background-color: rgb(235, 235, 235);
+    font-family: 'Roboto';
+}
+
+#main-header {
+    background-color: white;
+    font-weight: 600;
+    font-size: 35px;
+}
+
+.container-logo {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.logo {
+    vertical-align: middle;
 }
